--- a/index.html
+++ b/index.html
@@ -27,28 +27,24 @@
 
 <!-- OPEN GRAPH/SOCIAL MEDIA META TAGS -->
 	<!-- For Twitter -->
-	Card <meta name=”twitter:card” content=”summary”>
+	<meta name="twitter:card" content="summary">
 
-	Site <meta name=”twitter:site” value=”public.asu.edu/~jlbarn11/teaching/jQueryAPI/#autoLoad” />
+	<meta name="twitter:site" value="https://lolita-halper.github.io/SEO-meta/" />
 
-	Creator <meta name=”twitter:creator” value=”@lolitahalper” />
+	<meta name="twitter:creator" value="@lolitahalper" />
 
-	Title <meta name=”twitter:title” value=”The Bee Gees popular music albums from the 1960s era through the 1990s” />
+	<meta name="twitter:title" value="The Bee Gees popular music albums from the 1960s era through the 1990s" />
 
-	Description <meta name=”twitter:description” value=”The Bee Gees timeless hits and acclaimed popular albums from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb.”/>
+	<meta name="twitter:description" value="The Bee Gees timeless hits and acclaimed popular albums from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb."/>
 
-	image (you can find the link to the main/featured image on this page in the dev tools)
-
-	<meta name=”twitter:image” content="https://image.tmdb.org/t/p/w400//gmGK5Gw5CIGMPhOmTO0bNA9Q66c.jpg" />
+	<meta name="twitter:image" content="https://image.tmdb.org/t/p/w400//gmGK5Gw5CIGMPhOmTO0bNA9Q66c.jpg" />
 
 	<!-- Open Graph -->
-	Title <meta property="og:title" content="The Bee Gees popular music albums from the 1960s era through the 1990s" />
+	<meta property="og:title" content="The Bee Gees popular music albums from the 1960s era through the 1990s" />
 
-	Url <meta property="og:url" content="file:///Users/lolitahalper/Documents/~GIT%20414/Module%201/SEO-meta.html" />
+	<meta property="og:url" content="https://lolita-halper.github.io/SEO-meta/" />
 
-	Type <meta property="og:type" content=”website” />
-
-	image (you can find the link to the main/featured image on this page in the dev tools)
+	<meta property="og:type" content=”website” />
 
 	<meta property="og:image" content="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPICKS-AND-SPECKS.jpeg" />	
 
