--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
 	<!-- For Twitter -->
 	<meta name="twitter:card" content="summary">
 
-	<meta name="twitter:site" value="https://lolita-halper.github.io/SEO-meta/" />
+	<meta name="twitter:site" content="https://lolita-halper.github.io/SEO-meta/">
 
-	<meta name="twitter:creator" value="@lolitahalper" />
+	<meta name="twitter:creator" content="@lolitahalper">
 
-	<meta name="twitter:title" value="The Bee Gees popular music albums from the 1960s era through the 1990s" />
+	<meta name="twitter:title" content="The Bee Gees popular music albums from the 1960s era through the 1990s">
 
-	<meta name="twitter:description" value="The Bee Gees timeless hits and acclaimed popular albums from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb."/>
+	<meta name="twitter:description" content="The Bee Gees timeless hits and acclaimed popular albums from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb.">
 
-	<meta name="twitter:image" content="https://image.tmdb.org/t/p/w400//gmGK5Gw5CIGMPhOmTO0bNA9Q66c.jpg" />
+	<meta name="twitter:image" content="https://image.tmdb.org/t/p/w400//gmGK5Gw5CIGMPhOmTO0bNA9Q66c.jpg">
 
 	<!-- Open Graph -->
-	<meta property="og:title" content="The Bee Gees popular music albums from the 1960s era through the 1990s" />
+	<meta property="og:title" content="The Bee Gees popular music albums from the 1960s era through the 1990s">
 
-	<meta property="og:url" content="https://lolita-halper.github.io/SEO-meta/" />
+	<meta property="og:url" content="https://lolita-halper.github.io/SEO-meta/">
 
-	<meta property="og:type" content=”website” />
+	<meta property="og:type" content=”website”>
 
-	<meta property="og:image" content="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPICKS-AND-SPECKS.jpeg" />	
+	<meta property="og:image" content="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPICKS-AND-SPECKS.jpeg">	
 
 <!-- LINKS -->
 	<!-- To stylesheets and scripts, custom styles should always be last in order -->
