--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
 <!-- LINKS -->
 	<!-- To stylesheets and scripts, custom styles should always be last in order -->
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	
 	<!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. --> 
 
@@ -77,7 +79,7 @@
 	
 <body>
 	<!-- Skip To Content Link (https://css-tricks.com/how-to-create-a-skip-to-content-link/)(example at https://www.starbucks.com/) -->
-
+	<a class="skip-link" href='#main'>Skip to content</a>
 	
 	<!-- Add headings to give structure, context, relevance to the content-->
 	<!-- Add detailed alt attributes to the last 5 images, the other 29 are done for you as an example-->
