--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta name="description" content="The Bee Gees timeless hits and acclaimed popular albums from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb.">
 	
 	<!-- Summarize the main topic, avoid "keyword stuffing" -->
-	<title>The Bee Gees popular music albums from the 1960s era through the 1990s"</title>
+	<title>The Bee Gees popular music albums from the 1960s era through the 1990s</title>
 	
 	<!--Help web crawlers index and display your page -->
 	<meta name="robots" content="index">
@@ -55,26 +55,27 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	
 	<!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. --> 
-
+	<link rel="icon" type="image/png" href="favicon.png" sizes="196x196">
 	
 	<!--tells the search engine this is the permalink -->
-
+	<link rel="canonical" href="https://lolita-halper.github.io/SEO-meta/page">
 	
 	<!--Tells the browser to display this rather than the current page URL -->
-
+	<meta property="og:url" content="https://lolita-halper.github.io/SEO-meta/alternate-url">
 	
 	<!-- Tells the browser and search engine there are multiple languages of this page available-->
-
+	<link rel="alternate" hreflang="en" href="https://lolita-halper.github.io/SEO-meta/english-page">
+	<link rel="alternate" hreflang="es" href="https://lolita-halper.github.io/SEO-meta/spanish-page">
 
 	<!-- Gives credit to the author -->
-
+	<meta name="author" content="Lolita Halper">
 	
 	<!-- license or authorizations for the page-->
-
+	<meta name="license" content="Creative Commons Attribution 4.0 International License">
 
 <!-- TITLE -->	
 	<!--title of the page content displayed on search engines-->
-
+	
 </head>
 	
 <body>
@@ -84,10 +85,10 @@
 	<!-- Add headings to give structure, context, relevance to the content-->
 	<!-- Add detailed alt attributes to the last 5 images, the other 29 are done for you as an example-->
 	<header>
-		DISCOgraphy
+		<h1>DISCOgraphy</h1>
 		<p>The Bee Gees were a music group formed in 1958, featuring brothers Barry, Robin, and Maurice Gibb. The trio were especially successful as a popular music act in the late 1960s and early 1970s, and later as prominent performers of the disco music era in the mid- to late 1970s.</p>
 		<nav>
-			Main Navigation
+			<h2>Main Navigation</h2><!--hide this-->
 			<ul>
 				<li><a href="#">Discography</a></li>
 				<li><a href="#">News</a></li>
@@ -98,7 +99,7 @@
 	</header>
 	<main id="main">
 		<section>
-			Spicks and Specks
+			<h2>Spicks and Specks</h2>
 			<!-- all image links in this document are set as absolute links only so that you didn't need to download them all as part of the activity. DO NOT CODE YOUR IMAGES ON ASSIGNMENTS AS ABSOLUTE LINKS. Organize your project folder properly and use relative links for images -->
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPICKS-AND-SPECKS.jpeg" alt="Spicks and specks, the Bee Gees, abstract pop art in black, white, yellow, red and pink">
 			<dl>
@@ -109,7 +110,7 @@
 			</dl>
 		</section>
 		<section>
-			BeeGees 1st
+			<h2>BeeGees 1st</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEE-GEES-1ST.jpeg" alt="Bee Gees 1st, Barry, Robin, and Maurice Gibb walking through a psychedelic garden forest">
 			<dl>
 				<dt>Year</dt>
@@ -119,7 +120,7 @@
 			</dl>
 		</section>
 		<section>
-			Horizontal
+			<h2>Horizontal</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HORIZONTAL.jpeg" alt="Bee Gees horizontal, Barry, Robin, and Maurice Gibb reflected in a hallway mirror in sepia tone">
 			<dl>
 				<dt>Year</dt>
@@ -129,7 +130,7 @@
 			</dl>
 		</section>
 		<section>
-			Idea
+			<h2>Idea</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/IDEA.jpeg" alt="Bee Gees idea BeeGees, illustration of maurice gibb with half face in line art and the other half with a monocle, purple tint">
 			<dl>
 				<dt>Year</dt>
@@ -139,7 +140,7 @@
 			</dl>
 		</section>
 		<section>
-			Odessa
+			<h2>Odessa</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ODESSA.jpeg" alt="Bee Gees odessa written in yellow on a red background">
 			<dl>
 				<dt>Year</dt>
@@ -149,7 +150,7 @@
 			</dl>
 		</section>
 		<section>
-			Best of Bee Gees
+			<h2>Best of Bee Gees</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEST-OF-BEE-GEES.jpeg" alt="best of Bee Gees, Holiday, I've Gotta Get a Message to You, I Can't See Nobody, Words, I Started a Joke, Spicks and Specks, First of May, World, Massachusetts, To Love Somebody, Every Christian Lion Hearted Man Will Show You, New York Mining Disaster 1941, Barry, Robin, and Maurice Gibb sketched in black on yellow background">
 			<dl>
 				<dt>Year</dt>
@@ -159,7 +160,7 @@
 			</dl>
 		</section>
 		<section>
-			Cucumber Castle
+			<h2>Cucumber Castle</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/CUCUMBER-CASTLE.jpeg" alt="Bee Gees, cucumber castle, barry and robin gibb wearing suits of armor">
 			<dl>
 				<dt>Year</dt>
@@ -169,7 +170,7 @@
 			</dl>
 		</section>
 		<section>
-			2 Years On
+			<h2>2 Years On</h2>
 			<img src="images/2_YEARS_ON.jpeg" alt="Bee Gees 2 years on in blue on white background, old time-y photo pd the gibb brothers">
 			<dl>
 				<dt>Year</dt>
@@ -179,7 +180,7 @@
 			</dl>
 		</section>
 		<section>
-			Trafalgar
+			<h2>Trafalgar</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TRAFALGAR.jpeg" alt="Bee Gee, trafalgar, illustration, rolled parchment paper banner, 18th century ships in the sea">
 			<dl>
 				<dt>Year</dt>
@@ -189,7 +190,7 @@
 			</dl>
 		</section>
 		<section>
-			To Whom It May Concern
+			<h2>To Whom It May Concern</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TO-WHOM-IT-MAY-CONCERN.jpeg" alt="Bee Gees, to whom it may concern, the brothers gibb on stage">
 			<dl>
 				<dt>Year</dt>
@@ -199,7 +200,7 @@
 			</dl>
 		</section>
 		<section>
-			Life In A Tin Can
+			<h2>Life In A Tin Can</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LIFE-IN-A-TIN-CAN.jpeg" alt="the Bee Gees, life in a tine can, photo perspective is from above a soda pop can and the brothers gibb can been seen through the pop top in the can">
 			<dl>
 				<dt>Year</dt>
@@ -209,7 +210,7 @@
 			</dl>
 		</section>
 		<section>
-			Best of Bee Gees Volume 2
+			<h2>Best of Bee Gees Volume 2</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEST-OF-BEE-GEES-VOLUME.jpeg" alt="best of Bee Gees volume 2, the brothers gibb sitting on a black, white , and red abstract blanket in a tropical setting">
 			<dl>
 				<dt>Year</dt>
@@ -219,7 +220,7 @@
 			</dl>
 		</section>
 		<section>
-			Mr Natural
+			<h2>Mr Natural</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/MR-NATURAL.jpeg" alt="Bee Gees, mr natural, ll in neon sign, darkly lit bar with an old smiling person in focus">
 			<dl>
 				<dt>Year</dt>
@@ -229,7 +230,7 @@
 			</dl>
 		</section>
 		<section>
-			Main Course
+			<h2>Main Course</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/MAIN-COURSE.jpeg" alt="main course, Bee Gees, art deco illustration with green background adn a naked lady in a yellow hat">
 			<dl>
 				<dt>Year</dt>
@@ -239,7 +240,7 @@
 			</dl>
 		</section>
 		<section>
-			Children of the World
+			<h2>Children of the World</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/CHILDREN_OF_THE_WORLD.jpeg" alt="Bee Gees, children of the work, painting the the gibb brother wearing aviation flight jacket and white scarves">
 			<dl>
 				<dt>Year</dt>
@@ -249,7 +250,7 @@
 			</dl>
 		</section>
 		<section>
-			Here At Last
+			<h2>Here At Last</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HERE-AT-LAST.jpeg" alt="here at last, Bee Gees, ...live, the brothers gibb sharing a microphone on stage">
 			<dl>
 				<dt>Year</dt>
@@ -259,7 +260,7 @@
 			</dl>
 		</section>
 		<section>
-			Saturday Night Fever
+			<h2>Saturday Night Fever</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SATURDAY-NIGHT-FEVER.jpeg" alt="the original movie sound track, saturday night fever, iconic john travolta disco pose wearing a white suit with a black shirt, standing on a multicolor lit dance floor, photo of the gibb brothers wearing white suits in the background">
 			<dl>
 				<dt>Year</dt>
@@ -269,7 +270,7 @@
 			</dl>
 		</section>
 		<section>
-			Spirits Having Flown
+			<h2>Spirits Having Flown</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPIRITS_HAVING_FLOWN.jpeg" alt="Bee Gees spirits having fun, brothers gibb with hair flowing and a red gradient bubble">
 			<dl>
 				<dt>Year</dt>
@@ -279,7 +280,7 @@
 			</dl>
 		</section>
 		<section>
-			Bee Gees Greatest
+			<h2>Bee Gees Greatest</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEE-GEES-GREATEST.jpeg" alt="Bee Gees greatest, purple bubble and golden dove">
 			<dl>
 				<dt>Year</dt>
@@ -289,7 +290,7 @@
 			</dl>
 		</section>
 		<section>
-			Living Eyes
+			<h2>Living Eyes</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LIVING-EYES.jpeg" alt="living eyes, Bee Gees, the gibb brothers wearing formal clothes on a roof top with the new york skyline during sunset in the background">
 			<dl>
 				<dt>Year</dt>
@@ -299,7 +300,7 @@
 			</dl>
 		</section>
 		<section>
-			Staying Alive
+			<h2>Staying Alive</h2>
 			<img src="images/STAYING-ALIVE.jpeg" alt="the original motion picture soundtrack, staying alive, john travolta in stage lights, topless, sweaty, with a sweat headband">
 			<dl>
 				<dt>Year</dt>
@@ -309,7 +310,7 @@
 			</dl>
 		</section>
 		<section>
-			E.S.P
+			<h2>E.S.P</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ESP.jpeg" alt="E.S.P, Bee Gees, brothers gibb standing in a field at dusk">
 			<dl>
 				<dt>Year</dt>
@@ -319,7 +320,7 @@
 			</dl>
 		</section>
 		<section>
-			One
+			<h2>One</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ONE.jpeg" alt="Bee Gees, one, brothers gibb faces in black and white">
 			<dl>
 				<dt>Year</dt>
@@ -329,7 +330,7 @@
 			</dl>
 		</section>
 		<section>
-			Tales From The Brothers Gibb
+			<h2>Tales From The Brothers Gibb</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TALES-FROM-THE-BROTHERS-GIBB.jpeg" alt="Bee Gees, tales from teh brother gibb, a history in song, 1967-1990, parchment paper background, red stamped square, leaf stamp">
 			<dl>
 				<dt>Year</dt>
@@ -339,7 +340,7 @@
 			</dl>
 		</section>
 		<section>
-			High Civilization
+			<h2>High Civilization</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HIGH-CIVILIZATION.jpeg" alt="Bee Gees high civilization, photo composite with the brother gibb wearing all black, illustration of london in the background and technology item flying around in the sky, floppy disc, cube, power cord, eagle, keyboard, jet">
 			<dl>
 				<dt>Year</dt>
@@ -349,7 +350,7 @@
 			</dl>
 		</section>
 		<section>
-			Size Isnâ€™t Everything
+			<h2>Size Isnâ€™t Everything</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SIZE_ISNT_EVERYTHING.jpeg" alt="Bee Gees, size isn't everything, fun house mirror effect making the brothers gibb appear taller, miami style hotel and palm tree in teh background">
 			<dl>
 				<dt>Year</dt>
@@ -359,7 +360,7 @@
 			</dl>
 		</section>
 		<section>
-			Still Waters
+			<h2>Still Waters</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/STILL-WATERS.jpeg" alt="still waters, Bee Gees, sepia tone photo with the brothers gibb looking introspective">
 			<dl>
 				<dt>Year</dt>
@@ -369,7 +370,7 @@
 			</dl>
 		</section>
 		<section>
-			One Night Only
+			<h2>One Night Only</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ONE-NIGHT-ONLY.jpeg" alt="Bee Gees, one night only, black background with the brother gibb wearing all black, outer glow around them">
 			<dl>
 				<dt>Year</dt>
@@ -379,7 +380,7 @@
 			</dl>
 		</section>
 		<section>
-			This Is Where I Came In
+			<h2>This Is Where I Came In</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THIS-IS-WHERE-I-CAME-FROM.jpeg" alt="Bee Gees, this is where i came in, green floor an wall with a black and white, old photo of the brother gibb in the background, with the brothers standing in front of it, maurice and robin in blurred motion while walking and barry standing with hands in his pockets">
 			<dl>
 				<dt>Year</dt>
@@ -389,7 +390,7 @@
 			</dl>
 		</section>
 		<section>
-			Their Greatest Hits The Record
+			<h2>Their Greatest Hits The Record</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THEIR-GREATEST-HITS.jpg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -399,7 +400,7 @@
 			</dl>
 		</section>
 		<section>
-			Number Ones
+			<h2>Number Ones</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/NUMBER-ONES.jpeg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -409,7 +410,7 @@
 			</dl>
 		</section>
 		<section>
-			Love Songs
+			<h2>Love Songs</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LOVE-SONGS.jpeg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -419,7 +420,7 @@
 			</dl>
 		</section>
 		<section>
-			The Ultimate Bee Gees
+			<h2>The Ultimate Bee Gees</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THE-ULTIMATE-BEE-GEES.jpeg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -429,7 +430,7 @@
 			</dl>
 		</section>
 		<section>
-			Timeless â€“ The All-Time Greatest Hits
+			<h2>Timeless â€“ The All-Time Greatest Hits</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TIMELESS.jpeg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -440,7 +441,7 @@
 		</section>
 	</main>
 	<aside>
-		Recommendations
+		<h2>Recommendations</h2>
 		<p>If you like the Bee Gees, you might also like these bands.</p>
 		<ul>
 			<li><a href="#">KC and the Sunshine Band</a></li>
