--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 	<meta property="og:url" content="https://lolita-halper.github.io/SEO-meta/">
 
-	<meta property="og:type" content=”website”>
+	<meta property="og:type" content="website">
 
 	<meta property="og:image" content="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPICKS-AND-SPECKS.jpeg">	
 
@@ -391,7 +391,7 @@
 		</section>
 		<section>
 			<h2>Their Greatest Hits The Record</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THEIR-GREATEST-HITS.jpg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THEIR-GREATEST-HITS.jpg" alt="music record with a red lable in the center. Bee Gees and title in big black letters.">
 			<dl>
 				<dt>Year</dt>
 				<dd>2001</dd>
@@ -401,7 +401,7 @@
 		</section>
 		<section>
 			<h2>Number Ones</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/NUMBER-ONES.jpeg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/NUMBER-ONES.jpeg" alt="The number one in orange, yellow, and pink. black drawings of the three Gibbs brothers ontop on the one">
 			<dl>
 				<dt>Year</dt>
 				<dd>2004</dd>
@@ -411,7 +411,7 @@
 		</section>
 		<section>
 			<h2>Love Songs</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LOVE-SONGS.jpeg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LOVE-SONGS.jpeg" alt="white background with colorful flowers and butterflies. Bee Gees in cerise pink-">
 			<dl>
 				<dt>Year</dt>
 				<dd>2005</dd>
@@ -421,7 +421,7 @@
 		</section>
 		<section>
 			<h2>The Ultimate Bee Gees</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THE-ULTIMATE-BEE-GEES.jpeg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THE-ULTIMATE-BEE-GEES.jpeg" alt="The name Bee Gees as a blue, purple, and pink neon sign with a reflection in the shiny black floor.">
 			<dl>
 				<dt>Year</dt>
 				<dd>2009</dd>
@@ -431,7 +431,7 @@
 		</section>
 		<section>
 			<h2>Timeless â€“ The All-Time Greatest Hits</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TIMELESS.jpeg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TIMELESS.jpeg" alt="The three Gibbs' brothers in white clothing standing against a blue mosaic like wall and wearing glasses with white lenses">
 			<dl>
 				<dt>Year</dt>
 				<dd>2017</dd>
