--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<meta name="author" content="Lolita Halper">
 	
 	<!-- Accurate description about the content 140-160 characters to display on search engines -->
-	<meta name="description" content="The Bee Gees timeless hits and acclaimed popular albums from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb.">
+	<meta name="description" content="The Bee Gees timeless hits and acclaimed popular records from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb.">
 	
 	<!-- Summarize the main topic, avoid "keyword stuffing" -->
-	<title>The Bee Gees popular music albums from the 1960s era through the 1990s</title>
+	<!--I believe this should be the title and not a second description — <title>The Bee Gees — Popular Music Albums</title>-->
 	
 	<!--Help web crawlers index and display your page -->
 	<meta name="robots" content="index">
@@ -33,14 +33,14 @@
 
 	<meta name="twitter:creator" content="@lolitahalper">
 
-	<meta name="twitter:title" content="The Bee Gees popular music albums from the 1960s era through the 1990s">
+	<meta name="twitter:title" content="The Bee Gees — Popular Music Albums">
 
-	<meta name="twitter:description" content="The Bee Gees timeless hits and acclaimed popular albums from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb.">
+	<meta name="twitter:description" content="The Bee Gees timeless hits and acclaimed popular records from the 1960s through the 1990s. The group was formed in 1958 by Barry, Robin, and Maurice Gibb.">
 
 	<meta name="twitter:image" content="https://image.tmdb.org/t/p/w400//gmGK5Gw5CIGMPhOmTO0bNA9Q66c.jpg">
 
 	<!-- Open Graph -->
-	<meta property="og:title" content="The Bee Gees popular music albums from the 1960s era through the 1990s">
+	<meta property="og:title" content="The Bee Gees — Popular Music Albums">
 
 	<meta property="og:url" content="https://lolita-halper.github.io/SEO-meta/">
 
@@ -53,6 +53,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
 	
 	<!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. --> 
 	<link rel="icon" type="image/png" href="favicon.png" sizes="196x196">
@@ -75,7 +76,7 @@
 
 <!-- TITLE -->	
 	<!--title of the page content displayed on search engines-->
-	
+	<title>The Bee Gees — Popular Music Albums</title>
 </head>
 	
 <body>
@@ -131,7 +132,7 @@
 		</section>
 		<section>
 			<h2>Idea</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/IDEA.jpeg" alt="Bee Gees idea BeeGees, illustration of maurice gibb with half face in line art and the other half with a monocle, purple tint">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/IDEA.jpeg" alt="Bee Gees idea BeeGees, illustration of maurice Gibb with half face in line art and the other half with a monocle, purple tint">
 			<dl>
 				<dt>Year</dt>
 				<dd>1968</dd>
@@ -161,7 +162,7 @@
 		</section>
 		<section>
 			<h2>Cucumber Castle</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/CUCUMBER-CASTLE.jpeg" alt="Bee Gees, cucumber castle, barry and robin gibb wearing suits of armor">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/CUCUMBER-CASTLE.jpeg" alt="Bee Gees, cucumber castle, Barry and Robin Gibb wearing suits of armor">
 			<dl>
 				<dt>Year</dt>
 				<dd>1970</dd>
@@ -171,7 +172,7 @@
 		</section>
 		<section>
 			<h2>2 Years On</h2>
-			<img src="images/2_YEARS_ON.jpeg" alt="Bee Gees 2 years on in blue on white background, old time-y photo pd the gibb brothers">
+			<img src="images/2_YEARS_ON.jpeg" alt="Bee Gees 2 years on in blue on white background, old time-y photo pd the Gibb brothers">
 			<dl>
 				<dt>Year</dt>
 				<dd>1970</dd>
@@ -191,7 +192,7 @@
 		</section>
 		<section>
 			<h2>To Whom It May Concern</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TO-WHOM-IT-MAY-CONCERN.jpeg" alt="Bee Gees, to whom it may concern, the brothers gibb on stage">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TO-WHOM-IT-MAY-CONCERN.jpeg" alt="Bee Gees, to whom it may concern, the brothers Gibb on stage">
 			<dl>
 				<dt>Year</dt>
 				<dd>1972</dd>
@@ -201,7 +202,7 @@
 		</section>
 		<section>
 			<h2>Life In A Tin Can</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LIFE-IN-A-TIN-CAN.jpeg" alt="the Bee Gees, life in a tine can, photo perspective is from above a soda pop can and the brothers gibb can been seen through the pop top in the can">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LIFE-IN-A-TIN-CAN.jpeg" alt="the Bee Gees, life in a tine can, photo perspective is from above a soda pop can and the brothers Gibb can been seen through the pop top in the can">
 			<dl>
 				<dt>Year</dt>
 				<dd>1973</dd>
@@ -211,7 +212,7 @@
 		</section>
 		<section>
 			<h2>Best of Bee Gees Volume 2</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEST-OF-BEE-GEES-VOLUME.jpeg" alt="best of Bee Gees volume 2, the brothers gibb sitting on a black, white , and red abstract blanket in a tropical setting">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEST-OF-BEE-GEES-VOLUME.jpeg" alt="best of Bee Gees volume 2, the brothers Gibb sitting on a black, white , and red abstract blanket in a tropical setting">
 			<dl>
 				<dt>Year</dt>
 				<dd>1973</dd>
@@ -241,7 +242,7 @@
 		</section>
 		<section>
 			<h2>Children of the World</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/CHILDREN_OF_THE_WORLD.jpeg" alt="Bee Gees, children of the work, painting the the gibb brother wearing aviation flight jacket and white scarves">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/CHILDREN_OF_THE_WORLD.jpeg" alt="Bee Gees, children of the work, painting the the Gibb brother wearing aviation flight jacket and white scarves">
 			<dl>
 				<dt>Year</dt>
 				<dd>1976</dd>
@@ -251,7 +252,7 @@
 		</section>
 		<section>
 			<h2>Here At Last</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HERE-AT-LAST.jpeg" alt="here at last, Bee Gees, ...live, the brothers gibb sharing a microphone on stage">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HERE-AT-LAST.jpeg" alt="here at last, Bee Gees, ...live, the brothers Gibb sharing a microphone on stage">
 			<dl>
 				<dt>Year</dt>
 				<dd>1977</dd>
@@ -261,7 +262,7 @@
 		</section>
 		<section>
 			<h2>Saturday Night Fever</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SATURDAY-NIGHT-FEVER.jpeg" alt="the original movie sound track, saturday night fever, iconic john travolta disco pose wearing a white suit with a black shirt, standing on a multicolor lit dance floor, photo of the gibb brothers wearing white suits in the background">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SATURDAY-NIGHT-FEVER.jpeg" alt="the original movie sound track, saturday night fever, iconic john travolta disco pose wearing a white suit with a black shirt, standing on a multicolor lit dance floor, photo of the Gibb brothers wearing white suits in the background">
 			<dl>
 				<dt>Year</dt>
 				<dd>1977</dd>
@@ -271,7 +272,7 @@
 		</section>
 		<section>
 			<h2>Spirits Having Flown</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPIRITS_HAVING_FLOWN.jpeg" alt="Bee Gees spirits having fun, brothers gibb with hair flowing and a red gradient bubble">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPIRITS_HAVING_FLOWN.jpeg" alt="Bee Gees spirits having fun, brothers Gibb with hair flowing and a red gradient bubble">
 			<dl>
 				<dt>Year</dt>
 				<dd>1979</dd>
@@ -291,7 +292,7 @@
 		</section>
 		<section>
 			<h2>Living Eyes</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LIVING-EYES.jpeg" alt="living eyes, Bee Gees, the gibb brothers wearing formal clothes on a roof top with the new york skyline during sunset in the background">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LIVING-EYES.jpeg" alt="living eyes, Bee Gees, the Gibb brothers wearing formal clothes on a roof top with the new york skyline during sunset in the background">
 			<dl>
 				<dt>Year</dt>
 				<dd>1981</dd>
@@ -301,7 +302,7 @@
 		</section>
 		<section>
 			<h2>Staying Alive</h2>
-			<img src="images/STAYING-ALIVE.jpeg" alt="the original motion picture soundtrack, staying alive, john travolta in stage lights, topless, sweaty, with a sweat headband">
+			<img src="images/STAYING-ALIVE.jpeg" alt="the original motion picture soundtrack, staying alive, John Travolta in stage lights, topless, sweaty, with a sweat headband">
 			<dl>
 				<dt>Year</dt>
 				<dd>1983</dd>
@@ -311,7 +312,7 @@
 		</section>
 		<section>
 			<h2>E.S.P</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ESP.jpeg" alt="E.S.P, Bee Gees, brothers gibb standing in a field at dusk">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ESP.jpeg" alt="E.S.P, Bee Gees, brothers Gibb standing in a field at dusk">
 			<dl>
 				<dt>Year</dt>
 				<dd>1987</dd>
@@ -321,7 +322,7 @@
 		</section>
 		<section>
 			<h2>One</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ONE.jpeg" alt="Bee Gees, one, brothers gibb faces in black and white">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ONE.jpeg" alt="Bee Gees, one, brothers Gibb faces in black and white">
 			<dl>
 				<dt>Year</dt>
 				<dd>1989</dd>
@@ -331,7 +332,7 @@
 		</section>
 		<section>
 			<h2>Tales From The Brothers Gibb</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TALES-FROM-THE-BROTHERS-GIBB.jpeg" alt="Bee Gees, tales from teh brother gibb, a history in song, 1967-1990, parchment paper background, red stamped square, leaf stamp">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TALES-FROM-THE-BROTHERS-GIBB.jpeg" alt="Bee Gees, tales from teh brother Gibb, a history in song, 1967-1990, parchment paper background, red stamped square, leaf stamp">
 			<dl>
 				<dt>Year</dt>
 				<dd>1990</dd>
@@ -341,7 +342,7 @@
 		</section>
 		<section>
 			<h2>High Civilization</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HIGH-CIVILIZATION.jpeg" alt="Bee Gees high civilization, photo composite with the brother gibb wearing all black, illustration of london in the background and technology item flying around in the sky, floppy disc, cube, power cord, eagle, keyboard, jet">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HIGH-CIVILIZATION.jpeg" alt="Bee Gees high civilization, photo composite with the brother Gibb wearing all black, illustration of london in the background and technology item flying around in the sky, floppy disc, cube, power cord, eagle, keyboard, jet">
 			<dl>
 				<dt>Year</dt>
 				<dd>1991</dd>
@@ -351,7 +352,7 @@
 		</section>
 		<section>
 			<h2>Size Isnâ€™t Everything</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SIZE_ISNT_EVERYTHING.jpeg" alt="Bee Gees, size isn't everything, fun house mirror effect making the brothers gibb appear taller, miami style hotel and palm tree in teh background">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SIZE_ISNT_EVERYTHING.jpeg" alt="Bee Gees, size isn't everything, fun house mirror effect making the brothers Gibb appear taller, miami style hotel and palm tree in teh background">
 			<dl>
 				<dt>Year</dt>
 				<dd>1993</dd>
@@ -361,7 +362,7 @@
 		</section>
 		<section>
 			<h2>Still Waters</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/STILL-WATERS.jpeg" alt="still waters, Bee Gees, sepia tone photo with the brothers gibb looking introspective">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/STILL-WATERS.jpeg" alt="still waters, Bee Gees, sepia tone photo with the brothers Gibb looking introspective">
 			<dl>
 				<dt>Year</dt>
 				<dd>1997</dd>
@@ -371,7 +372,7 @@
 		</section>
 		<section>
 			<h2>One Night Only</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ONE-NIGHT-ONLY.jpeg" alt="Bee Gees, one night only, black background with the brother gibb wearing all black, outer glow around them">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ONE-NIGHT-ONLY.jpeg" alt="Bee Gees, one night only, black background with the brother Gibb wearing all black, outer glow around them">
 			<dl>
 				<dt>Year</dt>
 				<dd>1998</dd>
@@ -381,7 +382,7 @@
 		</section>
 		<section>
 			<h2>This Is Where I Came In</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THIS-IS-WHERE-I-CAME-FROM.jpeg" alt="Bee Gees, this is where i came in, green floor an wall with a black and white, old photo of the brother gibb in the background, with the brothers standing in front of it, maurice and robin in blurred motion while walking and barry standing with hands in his pockets">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THIS-IS-WHERE-I-CAME-FROM.jpeg" alt="Bee Gees, this is where i came in, green floor an wall with a black and white, old photo of the brother Gibb in the background, with the brothers standing in front of it, maurice and robin in blurred motion while walking and barry standing with hands in his pockets">
 			<dl>
 				<dt>Year</dt>
 				<dd>2001</dd>
@@ -391,7 +392,7 @@
 		</section>
 		<section>
 			<h2>Their Greatest Hits The Record</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THEIR-GREATEST-HITS.jpg" alt="music record with a red lable in the center. Bee Gees and title in big black letters.">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THEIR-GREATEST-HITS.jpg" alt="music record with a red label in the center. Bee Gees and title in big black letters.">
 			<dl>
 				<dt>Year</dt>
 				<dd>2001</dd>
@@ -411,7 +412,7 @@
 		</section>
 		<section>
 			<h2>Love Songs</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LOVE-SONGS.jpeg" alt="white background with colorful flowers and butterflies. Bee Gees in cerise pink-">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LOVE-SONGS.jpeg" alt="white background with colorful flowers and butterflies. Bee Gees in darker pink-">
 			<dl>
 				<dt>Year</dt>
 				<dd>2005</dd>
@@ -431,7 +432,7 @@
 		</section>
 		<section>
 			<h2>Timeless â€“ The All-Time Greatest Hits</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TIMELESS.jpeg" alt="The three Gibbs' brothers in white clothing standing against a blue mosaic like wall and wearing glasses with white lenses">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TIMELESS.jpeg" alt="The three Gibbs' brothers in white clothing standing against a blue mosaic wall and wearing glasses with white lenses">
 			<dl>
 				<dt>Year</dt>
 				<dd>2017</dd>
